--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,5 +1,40 @@
 .App {
   text-align: center;
+  height: 100vh;
+}
+.HeaderArea{
+  background-color: #ab02e3;
+  width: 100%;
+  height: 50%;
+}
+.HeaderArea p{
+  text-align: center;
+}
+.Menu {
+  height: auto;
+  width: 20%;
+  float: left;
+  padding-top: 15px;
+}
+.Menu img{
+  padding-top: 15px;
+}
+.Logo{
+  height: 100%;
+  width: 60%;
+  float: left;
+  color: aliceblue;
+}
+.Profile{
+  height: 100%;
+  width: 20%;
+  float: right;
+  padding-top: 10px;
+}
+.Profile img{
+  padding-top: 15px;
+  width: 40px;
+  height: 40px;
 }
 
 .App-logo {
