--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -36,7 +36,17 @@
   width: 40px;
   height: 40px;
 }
-
+.SearchBox{
+  height: 30%;
+  width: 90%;
+  background-color:rgb(255, 255, 255);
+  margin-left: 5%;
+  margin-top: -90px;
+  border-bottom: 8px solid #c7c7c7;
+  border-left: 5px solid #c7c7c7;
+  border-right: 5px solid #c7c7c7;
+  border-radius: 25px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
