--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -6,6 +6,11 @@
   padding: 0%;
   position: relative;
 }
+.Slide-box{
+  background-color: #ab02e3;
+  height: 300px;
+  margin-left: 20px;
+}
 .Container-Login{
   height: 100%;
   width: 100%;
@@ -108,6 +113,13 @@
   padding-top: 15px;
   width: 40px;
   height: 40px;
+}
+.Profile #moreBtn{
+  width: 20px;
+  height: 20px;
+  padding-bottom: 8px;
+  padding-left: 4px;
+  cursor: pointer;
 }
 .SearchBox{
   height: 30%;
@@ -257,9 +269,19 @@
   margin-top: 9%;
   display: block;
 }
+.LocalityDiv{
+  width: 100%;
+  height: 200px;
+  margin-top: 9%;
+  display: block;
+}
 .TitleDiv{
   width: 100%;
   height: 70px;
+}
+.TitleDiv #Title{
+  float: left;
+  margin-left: 6%;
 }
 .HighDemand #Title{
   float: left;
@@ -270,10 +292,9 @@
   height: 300px;
   padding-bottom: 5%;
   padding-top: 1%;
-  display: flex;
 }
 .ItemContent{
-  width: 40%;
+  width: 90%;
   height: 100%;
   position:relative;
   background-color: #ab02e3;
@@ -359,6 +380,48 @@
 }
 .RightBox #SocialMediaBtn{
   padding-left: 6%;
+}
+
+.Locality-Container{
+  width: 90%;
+  height: 100px;
+  position:relative;
+  background-color:#ff9900;
+  padding-bottom: 3%;
+  z-index:initial;
+  cursor: pointer;
+  border: 2px solid #ff9900;
+  float: left;
+  margin-left: 5%;
+  border-radius: 90%;
+}
+.Locality-Details{
+  width: 70%;
+  height: 100%;
+  float: left;
+  text-align: justify;
+}
+.Locality-Details h1{
+  font-size:larger;
+  margin-left: 40%;
+  margin-top: 7%;
+  color: #fafafa;
+}
+.Locality-Details h4{
+  font-size:smaller;
+  margin-left: 40%;
+  color: #fafafa;
+}
+.Rate-Arrow{
+  width: 30%;
+  height: 100%;
+  float: left;
+}
+.Rate-Arrow img{
+  width: 40px;
+  height: 50px;
+  margin-top: 20%;
+  margin-left: 20%;
 }
 
 .App-logo {
